--- a/homeworks/Ernest.Myrmyr_ErnestMk1/3-async/index.html
+++ b/homeworks/Ernest.Myrmyr_ErnestMk1/3-async/index.html
@@ -26,7 +26,7 @@
                         </select>
 
                         <input
-                          type="text"
+                          type="search"
                           name="searchInput"
                           id="searchInput"
                           class="search-input"
