--- a/homeworks/nikita.karchinskiy_Nikkarchinskiy/3-async/index.html
+++ b/homeworks/nikita.karchinskiy_Nikkarchinskiy/3-async/index.html
@@ -15,19 +15,16 @@
         <header class="header" data-header>
             <h1 class="header-title" data-title>BLOG</h1>
             <div class="wrapper-filter">
-                <select name="sort" data-filter-wrapper>
-                    <option value="Default" class="filte-sort">Default</option>
-                    <option value="From A to Z" class="filte-sort">From A to Z</option>
-                    <option value="From Z to A" class="filte-sort">From Z to A</option>
+                <select name="sort" class="select-wapper" data-filter-wrapper>
+                    <option value='Default' class="filte-sort">Default</option>
+                    <option value='From A to Z' class="filte-sort">From A to Z</option>
+                    <option value='From Z to A' class="filte-sort">From Z to A</option>
                 </select>
                 <input type="text" placeholder="Filter" class="filter-by-text" data-filtr-text>
             </div>
         </header>
         <div class="list-wrapper">
             <ul class="list" data-list>
-                <!-- <li class="tab"><h2 class="tab-title">Title</h2><p class="tab-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dignissimos doloribus quia, laudantium id pariatur dicta quod facere. Quisquam officia, illum consequatur, recusandae dolor ipsa corporis sapiente, tenetur ipsum commodi quos.</p></li>
-                <li class="tab"></li>
-                <li class="tab"></li> -->
             </ul>
         </div>
     </div>
