added filter, changed names of classes by BEM

--- a/homeworks/Andrii.Morozov_AndriiMorozov88/3-async/index_blog.html
+++ b/homeworks/Andrii.Morozov_AndriiMorozov88/3-async/index_blog.html
@@ -6,21 +6,21 @@
     <link rel="stylesheet" href="style_blog.css">
 </head>
 <body>
-    <header class="blog_filter">
-        <div class="blog_filter-blog">БЛОГ</div>
-        <div class="blog_filter-filter">
-        <form>
+    <header class="header__content">
+        <div class="header__content-blog">БЛОГ</div>
+        <div class="header__content-filter">
         <select data-sort>
             <option selected value="0">Sort</option>
             <option value="1">None Sorted</option>
             <option value="2">A-Z</option>
             <option value="3">Z-A</option>
         </select>
-    <input type="text" placeholder="filter" data-input-filter>
+        <form data-filter >
+    <input type="text" placeholder="filter" data-input>
         </form>
         </div>
     </header>
-    <main class="blog_container" data-blog-container>
+    <main class="blog__container" data-blog-container>
 
     </main>
     <script src="script_blog.js"></script>
