--- a/homeworks/ihor.kropyvnyi_20-Igorek-21/4-layouts/flexbox/index-flex.html
+++ b/homeworks/ihor.kropyvnyi_20-Igorek-21/4-layouts/flexbox/index-flex.html
@@ -7,22 +7,22 @@
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans+Narrow:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-<header class="header">
-    <h1 class="header__title">header</h1>
+<header class="holder__box holder__box--header">
+    <h1 class="box__title">header</h1>
 </header>
 <main class="holder">
-    <aside class="holder__aside__left">
-        <h2 class="aside__left__title">left</h2>
+    <aside class="holder__box holder__box--sidebar">
+        <h2 class="box__title">left</h2>
     </aside>
-    <section class="holder__section">
-        <h2 class="holder__section__title">middle</h2>
+    <section class="holder__box holder__box--section">
+        <h2 class="box__title">middle</h2>
     </section>
-    <aside class="holder__aside__right">
-        <h2 class="aside__right__title">right</h2>
+    <aside class="holder__box holder__box--sidebar">
+        <h2 class="box__title">right</h2>
     </aside>
 </main>
-<footer class="footer">
-    <h2 class="footer__title">footer</h2>
+<footer class="holder__box holder__box--footer">
+    <h2 class="box__title">footer</h2>
 </footer>
 </body>
 </html>
