added -title-, added setTimeout, added first letter

--- a/homeworks/Andrii.Morozov_AndriiMorozov88/3-async/index_blog.html
+++ b/homeworks/Andrii.Morozov_AndriiMorozov88/3-async/index_blog.html
@@ -9,7 +9,7 @@
     <header class="header__content">
         <div class="header__content-blog">БЛОГ</div>
         <div class="header__content-filter">
-        <select data-sort>
+        <select data-sort class>
             <option selected value="0">Sort</option>
             <option value="1">None Sorted</option>
             <option value="2">A-Z</option>
