--- a/homeworks/vladyslav.kovalov_kovalov/4-layouts/flexbox/index.html
+++ b/homeworks/vladyslav.kovalov_kovalov/4-layouts/flexbox/index.html
@@ -5,9 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Document</title>
+    <title>Holy Grail Layout | Flexbox</title>
 </head>
 <body>
-
+    <header class="header-block">
+        <h1 class="header-block__element title">Header</h1>
+    </header>
+    <section class="section-block">
+        <aside class="section-block__element section-block__element--left">
+            <h2 class="section-block__title title">Left</h2>
+        </aside>
+        <main class="section-block__element section-block__element--center">
+            <h2 class="section-block__title title">Middle</h2>
+        </main>
+        <aside class="section-block__element section-block__element--right">
+            <h2 class="section-block__title title">Right</h2>
+        </aside>
+    </section>
+    <footer class="footer-block">
+        <h2 class="footer-boock__title title">Footer</h2>
+    </footer>
 </body>
 </html>
