--- a/homeworks/vladyslav.medvediev_VladislavMedvedyev/3-async/index.html
+++ b/homeworks/vladyslav.medvediev_VladislavMedvedyev/3-async/index.html
@@ -8,6 +8,9 @@
     <title>Blog with filtering and sorting</title>
 </head>
 <body>
+    <div class="preloader" data-preloader>
+        <img src="preloader.gif" alt="preloader">
+    </div>
     <div class="container">
         <header class="header">
             <h1 class="headerName">blog</h1>
@@ -18,8 +21,8 @@
                     <option value="zToA">Z-A</option>
                 </select>
             </form>
-            <form class="headerFilter" action="" type="submit">
-                <input type="text" placeholder="Filter">                        
+            <form class="headerFilter" action="" type="submit" data-form>
+                <input type="text" placeholder="Filter" data-input>                        
             </form>
         </header>
         <main class="main">
