--- a/homeworks/vladyslav.medvediev_VladislavMedvedyev/3-async/index.html
+++ b/homeworks/vladyslav.medvediev_VladislavMedvedyev/3-async/index.html
@@ -13,10 +13,11 @@
     </div>
     <div class="container">
         <header class="header">
-            <h1 class="headerName">blog</h1>
-            <form class="headerForm" action="">Sort by
+            <h1 class="headerName"><span>b</span>log</h1>
+            <form class="headerSort" action="">
                 <select class="headerSort" data-sort>
-                    <option selected value="initial">initial</option>
+                    <option selected disabled>Sort</option>
+                    <option value="initial">initial</option>
                     <option value="aToZ">A-Z</option>
                     <option value="zToA">Z-A</option>
                 </select>
@@ -28,19 +29,19 @@
         <main class="main">
             <article class="article">
                 <h2 class="title" data-title-1></h2>
-                <p data-p-1></p>
+                <p class="p" data-p-1></p>
             </article>
             <article class="article">
                 <h2 class="title" data-title-2></h2>
-                <p data-p-2></p>
+                <p class="p" data-p-2></p>
             </article>
             <article class="article">
                 <h2 class="title" data-title-3></h2>
-                <p data-p-3></p>
+                <p class="p" data-p-3></p>
             </article>
             <article class="article">
                 <h2 class="title" data-title-4></h2>
-                <p data-p-4></p>
+                <p class="p" data-p-4></p>
             </article>
         </main>
     </div>
