--- a/homeworks/nikolay.krasniuk_Kingstar22/3-async/index.html
+++ b/homeworks/nikolay.krasniuk_Kingstar22/3-async/index.html
@@ -1,46 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BLOG</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Rubik:wght@700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/select.css">
-</head>
-<body>
-    <section class="blog">
-        <header class="blog__head">
-            <h1 class="blog__head-logo">BLOG</h1>
-            <nav class="blog__filter">
-                <div class="blog__select" date-sort-select>
-                    <button class="blog__select-sort" date-sort-posts>Sort </button>
-                    <div class="blog__select-list" date-select-list>
-                        <div class="blog__select-item" data-value="">Default </div>
-                        <div class="blog__select-item" data-value="1">A-Z </div>
-                        <div class="blog__select-item" data-value="2">Z-A </div>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>BLOG</title>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Rubik:wght@700&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="css/select.css">
+    </head>
+    <body>
+        <section class="blog">
+            <header class="blog__head">
+                <h1 class="blog__head-logo">BLOG</h1>
+                <nav class="blog__filter">
+                    <div class="blog__select" date-sort-select>
+                        <button class="blog__select-sort" date-sort-posts type="button">Sort </button>
+                        <div class="blog__select-list" date-select-list>
+                            <div class="blog__select-item" data-value="">Default </div>
+                            <div class="blog__select-item" data-value="1">A-Z </div>
+                            <div class="blog__select-item" data-value="2">Z-A </div>
+                        </div>
                     </div>
+                    <input type="text" name="filter" placeholder="Filter" class="blog__filter-search" data-filter-posts>
+                </nav>
+            </header>
+            <main class="blog__content" data-publication-block>
+                <div class="blog__preloader" data-loader>
+                    <svg class="blog_preloader-image" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100">
+                        <path id="p" fill="#fdb" d="M94.1 58.8c.6-2.8.9-5.8.9-8.8s-.3-6-.9-8.8l-11.7-.4c-.7-2.6-1.7-5-3-7.3l8-8.5c-3.3-4.9-7.5-9.2-12.5-12.5l-8.5 8c-2.3-1.3-4.7-2.3-7.3-3l-.3-11.6C56 5.3 53 5 50 5s-6 .3-8.8.9l-.4 11.7c-2.6.7-5 1.7-7.3 3l-8.5-8c-4.9 3.3-9.2 7.5-12.5 12.5l8 8.5c-1.3 2.3-2.3 4.7-3 7.3l-11.6.3C5.3 44 5 47 5 50s.3 6 .9 8.8l11.7.4c.7 2.6 1.7 5 3 7.3l-8 8.5c3.3 4.9 7.5 9.2 12.5 12.5l8.5-8c2.3 1.3 4.7 2.3 7.3 3l.4 11.7c2.7.5 5.7.8 8.7.8s6-.3 8.8-.9l.4-11.7c2.6-.7 5-1.7 7.3-3l8.5 8c4.9-3.3 9.2-7.5 12.5-12.5l-8-8.5c1.3-2.3 2.3-4.7 3-7.3l11.6-.3zM50 66.9c-9.3 0-16.9-7.6-16.9-16.9S40.7 33.1 50 33.1 66.9 40.7 66.9 50 59.3 66.9 50 66.9z"></path>
+                    </svg>
                 </div>
-                <input type="text" name="filter" placeholder="Filter" class="blog__filter-search" data-filter-posts>
-            </nav>
-        </header>
-        <main class="blog__content" data-publication-block>
-            <div class="blog__preloader" data-loader>
-                <svg class="blog_preloader-image"  xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100"><path id="p" fill="#fdb" d="M94.1 58.8c.6-2.8.9-5.8.9-8.8s-.3-6-.9-8.8l-11.7-.4c-.7-2.6-1.7-5-3-7.3l8-8.5c-3.3-4.9-7.5-9.2-12.5-12.5l-8.5 8c-2.3-1.3-4.7-2.3-7.3-3l-.3-11.6C56 5.3 53 5 50 5s-6 .3-8.8.9l-.4 11.7c-2.6.7-5 1.7-7.3 3l-8.5-8c-4.9 3.3-9.2 7.5-12.5 12.5l8 8.5c-1.3 2.3-2.3 4.7-3 7.3l-11.6.3C5.3 44 5 47 5 50s.3 6 .9 8.8l11.7.4c.7 2.6 1.7 5 3 7.3l-8 8.5c3.3 4.9 7.5 9.2 12.5 12.5l8.5-8c2.3 1.3 4.7 2.3 7.3 3l.4 11.7c2.7.5 5.7.8 8.7.8s6-.3 8.8-.9l.4-11.7c2.6-.7 5-1.7 7.3-3l8.5 8c4.9-3.3 9.2-7.5 12.5-12.5l-8-8.5c1.3-2.3 2.3-4.7 3-7.3l11.6-.3zM50 66.9c-9.3 0-16.9-7.6-16.9-16.9S40.7 33.1 50 33.1 66.9 40.7 66.9 50 59.3 66.9 50 66.9z"></path></svg>
-            </div>
-            <template data-template>
-                <article class="blog__publication">
-                    <h2 class="blog__publication-title" data-post-title></h2>
-                    <p class="blog__publication-message" data-post-text></p>
-                    <button class="blog__publication-delete" data-post-delete></button>
-                </article>
-            </template>
-        </main>
-    </section>
-    <script src="js/select.js"></script>
-    <script src="js/script.js"></script>
-</body>
+                <template data-template>
+                    <article class="blog__publication">
+                        <h2 class="blog__publication-title" data-post-title></h2>
+                        <p class="blog__publication-message" data-post-text></p>
+                        <button class="blog__publication-delete" data-post-delete type="button"></button>
+                    </article>
+                </template>
+            </main>
+        </section>
+        <script src="js/select.js"></script>
+        <script src="js/script.js"></script>
+    </body>
 </html>
