--- a/homeworks/nikita.karchinskiy_Nikkarchinskiy/3-async/index.html
+++ b/homeworks/nikita.karchinskiy_Nikkarchinskiy/3-async/index.html
@@ -11,6 +11,9 @@
     <title>Document</title>
 </head>
 <body>
+    <div class="mask">
+        <div class="loader"></div>
+    </div>
     <div class="main-wrapper">
         <header class="header" data-header>
             <h1 class="header-title" data-title>BLOG</h1>
