Fixed HTML markup

--- a/homeworks/ivan.bieliaiev_Ckakipaki/4-modules/index.html
+++ b/homeworks/ivan.bieliaiev_Ckakipaki/4-modules/index.html
@@ -31,10 +31,10 @@
             </h1>
             <div class="right__time"></div>
             <select data-time-zone size="1" class="right__timezones">
-                <option data-zone="kiev" selected value="kiev">sort</option>
-                <option data-sort="tokyo" value="tokyo">A to Z</option>
-                <option data-sort="london" value="london">Z to A</option>
-                <option data-sort="new-York" value="new-York">Z to A</option>
+                <option data-zone="kiev" selected value="kiev">Kiev</option>
+                <option data-sort="tokyo" value="tokyo">Tokyo</option>
+                <option data-sort="london" value="london">London</option>
+                <option data-sort="new-York" value="new-York">New York</option>
             </select>
         </div>
     </section>
