--- a/homeworks/ivan.bieliaiev_Ckakipaki/4-modules/index.html
+++ b/homeworks/ivan.bieliaiev_Ckakipaki/4-modules/index.html
@@ -8,10 +8,10 @@
 <body>
     <section class="main">
         <div class="main__left">
-            <h1 class="left__title">
+            <p class="left__title">
                 Date
-            </h1>
-            <input type="text" data-input-date class="left__input">
+            </p>
+            <input type="text" data-input-date class="left__input" value="10/11/2021">
             <button type="submit" data-mondays class="left__button">
                 Get month mondays
             </button>
@@ -26,10 +26,12 @@
             </button>
         </div>
         <div class="main__right">
-            <h1 class="right__title">
+            <p class="right__title">
                 Current time
-            </h1>
-            <div class="right__time"></div>
+            </p>
+            <div class="right__time">
+                13:05
+            </div>
             <select data-time-zone size="1" class="right__timezones">
                 <option data-zone="kiev" selected value="kiev">Kiev</option>
                 <option data-sort="tokyo" value="tokyo">Tokyo</option>
