--- a/homeworks/ivan.bieliaiev_Ckakipaki/4-modules/index.html
+++ b/homeworks/ivan.bieliaiev_Ckakipaki/4-modules/index.html
@@ -15,15 +15,19 @@
             <button type="submit" data-mondays class="left__button">
                 Get month mondays
             </button>
+            <div class="left__result" data-mondays-result></div>
             <button type="submit" data-is-long class="left__button">
                 Is month long?
             </button>
+            <div class="left__result" data-is-long-result></div>
             <button type="submit" data-shortest-week class="left__button">
                 Days in shortest week
             </button>
+            <div class="left__result" data-shortest-week-result></div>
             <button type="submit" data-full-weeks class="left__button">
                 Full weeks in month
             </button>
+            <div class="left__result" data-full-weeks-result></div>
         </div>
         <div class="main__right">
             <p class="right__title">
