--- a/homeworks/oleksandr.prylutskiy_SanSandru4/4-modules/index.html
+++ b/homeworks/oleksandr.prylutskiy_SanSandru4/4-modules/index.html
@@ -11,16 +11,17 @@
     <container class="outer_shell">
         <main class="main__form_manipulation_calendar" data-main-form>
             <h3 class="name_data">Data:</h3>
-            <input type="date" name="calendar" class="calendar_for_take_data" data-take-calendar>
+            <input type="date" name="calendar" min="2020-01-01" class="calendar_for_take_data" data-take-calendar>
             <input type="button" value="Get month monday" class="btn__add_event" data-get-monday>
             <div class="out-information" data-out-monday></div>
             <input type="button" value="Is month long?" class="btn__add_event" data-long-month>
-            <div class="out-information"></div>
+            <div class="out-information" data-out-long-month></div>
             <input type="button" value="Days of shortest week in month" class="btn__add_event" data-shortest-week>
             <div class="out-information"></div>
             <input type="button" value="Full weeks in month" class="btn__add_event" data-full-weeks>
         </main>
     </container>
-    <script src="script.js"></script>
+    <script type="module" src="script.js"></script>
+    <!-- <script type="module" src="time.js"></script> -->
 </body>
 </html>
