--- a/homeworks/vladyslav.kovalov_kovalov/4-modules/page.html
+++ b/homeworks/vladyslav.kovalov_kovalov/4-modules/page.html
@@ -7,6 +7,8 @@
         <title>Document</title>
     </head>
     <body>
-        <div class="page"></div>
+        <div class="page">
+            <h1>Hello</h1>
+        </div>
     </body>
 </html>
