added empty index file

--- a/homeworks/vladyslav.kovalov_kovalov/4-modules/index.html
+++ b/homeworks/vladyslav.kovalov_kovalov/4-modules/index.html
@@ -7,8 +7,6 @@
         <title>Document</title>
     </head>
     <body>
-        <div class="page">
-            <h1>Hello</h1>
-        </div>
+        <script type="module" defer src="styles.css"></script>
     </body>
 </html>
