added card markup

--- a/homeworks/vladyslav.kovalov_kovalov/4-modules/index.html
+++ b/homeworks/vladyslav.kovalov_kovalov/4-modules/index.html
@@ -7,6 +7,9 @@
         <title>Document</title>
     </head>
     <body>
+        <div class="page-container" data-page>
+
+        </div>
         <script type="module" defer src="styles.css"></script>
     </body>
 </html>
