--- a/homeworks/Andrii.Morozov_AndriiMorozov88/4-modules/index_date.html
+++ b/homeworks/Andrii.Morozov_AndriiMorozov88/4-modules/index_date.html
@@ -6,11 +6,11 @@
 <body>
     <input type="date" data-date>
     <div data-day-dates></div>
-    <button data-long>Long month?</button>
+    <button type="button" data-long>Long month?</button>
     <div data-long-month></div>
-    <button data-btn-short-week>Amount of days of shortest week</button>
+    <button type="button" data-btn-short-week>Amount of days of shortest week</button>
     <div data-short-week></div>
-    <button data-btn-full-week>Amount of full weeks</button>
+    <button type="button" data-btn-full-week>Amount of full weeks</button>
     <div data-full-week></div>
     <script type="module" src="script_date.js"></script>
 </body>
