--- a/homeworks/oleksandr.prylutskiy_SanSandru4/4-modules/index.html
+++ b/homeworks/oleksandr.prylutskiy_SanSandru4/4-modules/index.html
@@ -19,7 +19,7 @@
             <input type="button" value="Days of shortest week in month" class="btn__add_event" data-shortest-week>
             <div class="out-information" data-short-week></div>
             <input type="button" value="Full weeks in month" class="btn__add_event" data-full-weeks>
-            <div class="out-information" data-full-weeks></div>
+            <div class="out-information" data-out-full-weeks></div>
         </main>
     </container>
     <script type="module" src="script.js"></script>
