--- a/homeworks/vladyslav.medvediev_VladislavMedvedyev/3-async/index.html
+++ b/homeworks/vladyslav.medvediev_VladislavMedvedyev/3-async/index.html
@@ -23,10 +23,10 @@
                 </select>
             </form>
             <form class="headerFilter" action="" type="submit" data-form>
-                <input type="text" placeholder="Filter" data-input>                        
+                <input type="text" placeholder="       Filter" data-input>                        
             </form>
         </header>
-        <main class="main">
+        <main class="main" data-main>
             <article class="article">
                 <h2 class="title" data-title-1></h2>
                 <p class="p" data-p-1></p>
