--- a/homeworks/roman.buzukov_BuzRom/4-modules/index.html
+++ b/homeworks/roman.buzukov_BuzRom/4-modules/index.html
@@ -17,6 +17,15 @@
                     <input class="item__input" type="date" data-userMonth>
                 </li>
                 <li class="container__list-item item">
+                    <select class="container__list-select" data-daySelector>
+                        <option selected value="1">Mondays</option>
+                        <option value="2">Tuesdays</option>
+                        <option value="3">Wednesdays</option>
+                        <option value="4">Thursdays</option>
+                        <option value="5">Fridays</option>
+                        <option value="6">Saturdays</option>
+                        <option value="0">Sundays</option>
+                    </select>
                     <button type="button" class="item__button" data-dayCount>Get month Mondays</button>
                     <p class="item__text" data-dayCount-state></p>
                 </li>
