--- a/homeworks/maksym.selenkov_MaksymSelenkov/4-modules/index.html
+++ b/homeworks/maksym.selenkov_MaksymSelenkov/4-modules/index.html
@@ -6,25 +6,31 @@
             content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>4-modules</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <div style="border: #0E0E0E solid; padding: 30px">
-            <div>
+        <main class="main">
+            <section class="main__section">
+                <p>Date</p>
                 <input type="date" data-input>
-            </div>
-            <div>
+            </section>
+            <section class="main__section">
                 <button type="button" data-mondays>Get month mondays</button>
-            </div>
-            <div>
+                <p data-result-mondays></p>
+            </section>
+            <section class="main__section">
                 <button type="button" data-month>Is month long?</button>
-            </div>
-            <div>
+                <p data-result-month></p>
+            </section>
+            <section class="main__section">
                 <button type="button" data-short-week>Days of shortest week in month</button>
-            </div>
-            <div>
+                <p data-result-short-week></p>
+            </section>
+            <section class="main__section">
                 <button type="button" data-full-weeks>Full weeks in month</button>
-            </div>
-        </div>
+                <p data-result-full-weeks></p>
+            </section>
+        </main>
         <script type="module" src="app.js"></script>
     </body>
 </html>
