--- a/homeworks/vladyslav.medvediev_VladislavMedvedyev/4-modules/index.html
+++ b/homeworks/vladyslav.medvediev_VladislavMedvedyev/4-modules/index.html
@@ -19,7 +19,7 @@
         </section>
         <section class="section" data-month-long>
             <button class="month-long__button" data-month-long__button>Is month long?</button>
-            <p class="month-long__output" data-month-long__output></p>
+            фывфвфвф <p class="month-long__output" data-month-long__output></p>
         </section>
         <section class="section" data-shortest-week-day>
             <button class="shortest-week-days__button" data-shortest-week-days__button>Days of shortest week in month</button>
@@ -34,5 +34,6 @@
 
 
     <script src="script.js"></script>
+    <script type="module" src="time.js"></script>
 </body>
 </html>
