--- a/homeworks/nikolay.krasniuk_Kingstar22/4-modules/index.html
+++ b/homeworks/nikolay.krasniuk_Kingstar22/4-modules/index.html
@@ -9,16 +9,16 @@
     </head>
     <body>
         <section data-times-block class="times">
-            <label class="times__date">Date:</label>
+            <label class="times__date-title">Date:</label>
             <input data-entry-date class="times__date-entry" type="date">
-            <button data-btn-fridays class="times__btn" type="button">Get month fridays</button>
-            <label data-output-fridays class="times__date">#</label>
+            <button data-btn-mondays class="times__btn" type="button">Get month mondays</button>
+            <label data-output-mondays class="times__date"></label>
             <button data-btn-month-question class="times__btn" type="button">Is month long?</button>
-            <label data-output-month-question class="times__date">#</label>
-            <button data-btn-days-question class="times__btn" type="button">Days of shortest week in month</button>
-            <label data-output-days-question class="times__date">#</label>
-            <button data-btn-weeks-question class="times__btn" type="button">Full weeks in month</button>
-            <label data-output-weeks-question class="times__date">#</label>
+            <label data-output-month-question class="times__date"></label>
+            <button data-btn-shortest-question class="times__btn" type="button">Days of shortest week in month</button>
+            <label data-output-shortest-question class="times__date"></label>
+            <button data-btn-full-question class="times__btn" type="button">Full weeks in month</button>
+            <label data-output-full-question class="times__date"></label>
         </section>
         <script type="module" src="script.js"></script>
     </body>
