--- a/homeworks/konstantin.rusenko_ConstantinRusenko/4-modules/index.html
+++ b/homeworks/konstantin.rusenko_ConstantinRusenko/4-modules/index.html
@@ -1,36 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Document</title>
-</head>
-<body>
-    <main class="main">
-        <div class="controls">
-            <label class="data control">Data:</label>
-            <input type="date" class="control__input control" data-input>
-            <button class="control-button control" data-month-length>Is month long?</button>
-            <label class="out-info control" data-length></label>
-            <button class="control-button control" data-get-mondays>Get month mondays</button>
-            <label class="out-info control" data-monday></label>
-            <button class="control-button control" data-shortest-week>Days of shortest week in month</button>
-            <label class="out-info control" data-shortest></label>
-            <button class="control-button control" data-full-weeks>Full weeks in month</button>
-            <label class="out-info control" data-full></label>
-        </div>
-        <div class="time-block">
-            <div class="time-block__clock clock" data-clock></div>
-            <select class="time-block__select" data-select>
-                <option value="0">Current</option>
-                <option value="-2">London</option>
-                <option value="7">Tokio</option>
-                <option value="-3">New York</option>
-            </select>
-        </div>
-    </main>
-    <script type="module" src="index.js"></script>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="style.css">
+        <title>Document</title>
+    </head>
+    <body>
+        <main class="main">
+            <div class="controls">
+                <label class="data control">Data:</label>
+                <input type="date" class="control__input control" data-input>
+                <button type="button" class="control-button control" data-month-length>Is month long?</button>
+                <label class="out-info control" data-length></label>
+                <button type="button" class="control-button control" data-get-mondays>Get month mondays</button>
+                <label class="out-info control" data-monday></label>
+                <button type="button" class="control-button control" data-shortest-week>Days of shortest week in month</button>
+                <label class="out-info control" data-shortest></label>
+                <button type="button" class="control-button control" data-full-weeks>Full weeks in month</button>
+                <label class="out-info control" data-full></label>
+            </div>
+            <div class="time-block">
+                <div class="time-block__clock clock" data-clock></div>
+                <select class="time-block__select" data-select>
+                    <option value="0">Current</option>
+                    <option value="-2">London</option>
+                    <option value="7">Tokio</option>
+                    <option value="-3">New York</option>
+                </select>
+            </div>
+        </main>
+        <script type="module" src="index.js"></script>
+    </body>
 </html>
