corrected according to the remaks

--- a/homeworks/roman.buzukov_BuzRom/4-modules/index.html
+++ b/homeworks/roman.buzukov_BuzRom/4-modules/index.html
@@ -45,10 +45,10 @@
             <div class="container__block">
                 <p class="container__block-time" data-time-state></p>
                 <select class="container__block-select" data-citySelector>
-                    <option selected value="Local">Current</option>
-                    <option value="Asia/Tokyo">Tokyo</option>
-                    <option value="Europe/London">London</option>
-                    <option value="America/New_York">New York</option>
+                    <option selected value="0">Current</option>
+                    <option value="7">Tokyo</option>
+                    <option value="-2">London</option>
+                    <option value="-7">New York</option>
                 </select>
             </div>
 
