change class names

--- a/homeworks/konstantin.rusenko_ConstantinRusenko/4-modules/index.html
+++ b/homeworks/konstantin.rusenko_ConstantinRusenko/4-modules/index.html
@@ -12,13 +12,13 @@
             <div class="controls">
                 <label class="data control">Data:</label>
                 <input type="date" class="control__input control" data-input>
-                <button type="button" class="control-button control" data-month-length>Is month long?</button>
+                <button type="button" class="control__button control" data-month-length>Is month long?</button>
                 <label class="out-info control" data-length></label>
-                <button type="button" class="control-button control" data-get-mondays>Get month mondays</button>
+                <button type="button" class="control__button control" data-get-mondays>Get month mondays</button>
                 <label class="out-info control" data-monday></label>
-                <button type="button" class="control-button control" data-shortest-week>Days of shortest week in month</button>
+                <button type="button" class="control__button control" data-shortest-week>Days of shortest week in month</button>
                 <label class="out-info control" data-shortest></label>
-                <button type="button" class="control-button control" data-full-weeks>Full weeks in month</button>
+                <button type="button" class="control__button control" data-full-weeks>Full weeks in month</button>
                 <label class="out-info control" data-full></label>
             </div>
             <div class="time-block">
