--- a/homeworks/vladyslav.kovalov_kovalov/4-modules/index.html
+++ b/homeworks/vladyslav.kovalov_kovalov/4-modules/index.html
@@ -14,9 +14,9 @@
                     <input type="time" class="card__control card__control--clock" value="" disabled data-clock>
                     <select name="" id="" class="card__control card__timezone-selection" data-timezone>
                         <option value="EET" class="card__timezone" selected>Current</option>
-                        <option value="JST" class="card__timezone" selected>Tokyo</option>
-                        <option value="GMT" class="card__timezone" selected>London</option>
-                        <option value="EST" class="card__timezone" selected>New York</option>
+                        <option value="JST" class="card__timezone">Tokyo</option>
+                        <option value="GMT" class="card__timezone">London</option>
+                        <option value="EST" class="card__timezone">New York</option>
                     </select>
                 </form>
             </section>
